--- a/src/app/gestion/create-registration/create-registration.component.html
+++ b/src/app/gestion/create-registration/create-registration.component.html
@@ -1,12 +1,12 @@
 <div class="register">
   <form [formGroup]="registerForm"  (ngSubmit)="register()">
       <div>
-          <input type="number" placeholder="nombre de place" formControlName="nbGuest">
+          <input class="input-group-text" type="number" placeholder="nombre de place" formControlName="nbGuest">
       </div>
 
 
       <div>
-          <input type="submit" value="S'incrire">
+          <input class="btn btn-warning" type="submit" value="S'incrire">
       </div>
 
 
