--- a/src/app/gestion/login/login.component.html
+++ b/src/app/gestion/login/login.component.html
@@ -1,15 +1,17 @@
 <div class="login">
   <form [formGroup]="loginForm" (ngSubmit)="login()">
       <div>
-          <input type="text" placeholder="Login ou Email"  formControlName="identifier">
+          <input class="input-group-text" type="text" placeholder="Login ou Email"  formControlName="identifier">
       </div>
       <div>
-          <input type="password" placeholder="Mot de passe"  formControlName="password">
+          <input class="input-group-text" type="password" placeholder="Mot de passe"  formControlName="password">
       </div>
       <div>
-          <input type="submit" value="Se connecter">
+          <input class="btn btn-warning" type="submit" value="Se connecter">
       </div>
+      <div>
 
-      <a routerLink="/gestion/register">Pas de compte ? Cliquez ici pour en créer un </a>
+        <a routerLink="/gestion/register">Pas de compte ? Cliquez ici pour en créer un </a>
+      </div>
   </form>
 </div>
