--- a/src/app/gestion/myreservations/myreservations.component.html
+++ b/src/app/gestion/myreservations/myreservations.component.html
@@ -4,7 +4,7 @@
   <div class="event" *ngFor="let item of liste">
     <h3>{{item.name}}</h3>
     <p>{{item.description}}</p>
-    <a routerLink="/gestion/detail/{{item.id}}"><button >🔎</button>  </a><!-- voir détail -->
+    <a routerLink="/gestion/detail/{{item.id}}"><button class="btn btn-warning">🔎</button>  </a><!-- voir détail -->
 
 
   </div>
