--- a/src/app/gestion/myreservations/myreservations.component.scss
+++ b/src/app/gestion/myreservations/myreservations.component.scss
@@ -1,14 +1,20 @@
 .allEvent{
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(5, 1fr);
   grid-column-gap: 15px;
   grid-row-gap: 15px;
+  text-align: center;
+  margin-left:auto;
 }
 
 .event{
   border: 1px solid black;
  width: 75%;
  text-align: center;
- padding: 1%;
+ padding: 3%;
+ margin-left: auto;
+margin-right: auto;
+border-radius:15px;
+margin-top:2%;
 }
