--- a/src/app/gestion/register/register.component.html
+++ b/src/app/gestion/register/register.component.html
@@ -1,32 +1,35 @@
 <div class="register">
   <form [formGroup]="registerForm"  (ngSubmit)="register()">
       <div>
-          <input type="text" placeholder="Pseudo" formControlName="pseudo">
+          <input class="input-group-text" type="text" placeholder="Pseudo" formControlName="pseudo">
           <span *ngIf="registerForm.get('pseudo')?.touched && registerForm.get('pseudo')?.errors?.['required']">Champs requis</span>
       </div>
       <div>
-          <input type="email" placeholder="Email" formControlName="email">
+          <input class="input-group-text" type="email" placeholder="Email" formControlName="email">
           <span *ngIf="registerForm.get('email')?.touched && registerForm.get('email')?.errors?.['required']">Champs requis</span>
       </div>
       <div>
-          <input type="text" placeholder="Nom" formControlName="lastname">
+          <input class="input-group-text" type="text" placeholder="Nom" formControlName="lastname">
           <span *ngIf="registerForm.get('lastname')?.touched && registerForm.get('lastname')?.errors?.['required']">Champs requis</span>
       </div>
       <div>
-          <input type="text" placeholder="Prénom" formControlName="firstname">
+          <input class="input-group-text" type="text" placeholder="Prénom" formControlName="firstname">
           <span *ngIf="registerForm.get('firstname')?.touched && registerForm.get('firstname')?.errors?.['required']">Champs requis</span>
       </div>
       <div>
-          <input type="password" placeholder="Mot de Passe" formControlName="password">
+          <input class="input-group-text" type="password" placeholder="Mot de Passe" formControlName="password">
           <span *ngIf="registerForm.get('password')?.touched && registerForm.get('password')?.errors?.['required']">Champs requis</span>
           <span *ngIf="registerForm.get('password')?.dirty && registerForm.get('password')?.errors?.['pattern']">Regex Warning</span>
       </div>
       <div>
-          <input type="submit" value="Créer un compte">
+          <input q  type="submit" value="Créer un compte">
       </div>
       <div *ngIf="isCreate ==='true'">
         <p>Compte à bien été créer</p>
       </div>
-      <a routerLink="/gestion/login">Déjà un compte ? Cliquez ici pour vous connecter</a>
+      <div>
+
+        <a routerLink="/gestion/login">Déjà un compte ? Cliquez ici pour vous connecter</a>
+      </div>
   </form>
 </div>
